--- a/react-portfolio/package.json
+++ b/react-portfolio/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@fontsource/outfit": "^5.0.13",
     "@fontsource/roboto": "^5.0.13",
+    "@tsparticles/all": "^3.5.0",
+    "@tsparticles/react": "^3.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -23,6 +25,7 @@
     "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "sass": "^1.77.6",
     "vite": "^5.3.1"
   }
 }
