--- a/react-portfolio/package.json
+++ b/react-portfolio/package.json
@@ -12,10 +12,14 @@
   "dependencies": {
     "@fontsource/outfit": "^5.0.13",
     "@fontsource/roboto": "^5.0.13",
+    "@jdion/tilt-react": "^1.0.0",
     "@tsparticles/all": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-fps-stats": "^0.3.1",
+    "react-headroom": "^3.2.1",
+    "stats.js": "^0.17.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
