--- a/react-portfolio/src/data/projects.json
+++ b/react-portfolio/src/data/projects.json
@@ -1,27 +1,19 @@
 [
     {
-      "title": "Project A",
-      "imageSrc": "projects/project.png",
-      "description": "This is a project made to learn the latest languages by building an app.",
-      "skills": ["React", "Express", "Node"],
-      "demo": "https://www.example.com",
-      "source": "https://www.github.com"
+      "title": "English Calculator",
+      "imageSrc": "projects/SmartCal.gif",
+      "description": "Calculator application utilizing Google's speech recognition library  in Python for hands-free arithmetic.",
+      "skills": ["Python"],
+      "demo": "'../../../public/SmartCal.mp4'",
+      "source": "https://github.com/ChimpanzEatingGrades/EnglishCalculator"
     },
     {
-      "title": "Project B",
-      "imageSrc": "projects/project.png",
-      "description": "This is a project made to learn the latest languages by building an app.",
-      "skills": ["React", "Express", "Node", "Sass"],
-      "demo": "https://www.example.com",
-      "source": "https://www.github.com"
-    },
-    {
-      "title": "Project C",
-      "imageSrc": "projects/project.png",
-      "description": "This is a project made to learn the latest languages by building an app.",
-      "skills": ["React", "Express", "Node"],
-      "demo": "https://www.example.com",
-      "source": "https://www.github.com"
+      "title": "Fisbuk",
+      "imageSrc": "projects/fisbuk.png",
+      "description": "A multi-page website styled and programmed in vanilla CSS and JavaScript. Includes computational and practical functionalities such as a tax calculator, .",
+      "skills": ["HTML", "CSS", "JavaScript"],
+      "demo": "https://chimpanzeatinggrades.github.io/CS1130/",
+      "source": "https://github.com/ChimpanzEatingGrades/CS1130"
     }
   ]
   
