--- a/react-portfolio/src/data/projects.json
+++ b/react-portfolio/src/data/projects.json
@@ -4,16 +4,24 @@
       "imageSrc": "projects/SmartCal.gif",
       "description": "Calculator application utilizing Google's speech recognition library  in Python for hands-free arithmetic.",
       "skills": ["Python"],
-      "demo": "'../../../public/SmartCal.mp4'",
+      "demo": "../../../public/SmartCal.mp4",
       "source": "https://github.com/ChimpanzEatingGrades/EnglishCalculator"
     },
     {
       "title": "Fisbuk",
       "imageSrc": "projects/fisbuk.png",
-      "description": "A multi-page website styled and programmed in vanilla CSS and JavaScript. Includes computational and practical functionalities such as a tax calculator, .",
+      "description": "A multi-page website styled and programmed in vanilla CSS and JavaScript. Includes computational and practical functionalities such as an employee payroll system, a tax calculator, a grade computation system and measurement conversions.",
       "skills": ["HTML", "CSS", "JavaScript"],
       "demo": "https://chimpanzeatinggrades.github.io/CS1130/",
       "source": "https://github.com/ChimpanzEatingGrades/CS1130"
+    },
+    {
+      "title": "Product Management System",
+      "imageSrc": "projects/productMS.png",
+      "description": "Developed a full-stack product management system with a Java-based GUI (Swing) for the frontend and MySQL for the database backend. The system supports features such as user registration/verification, an automated restock alert system, order and supplier management, CRUD functions, product tracking, and inventory control. The application enables users to create accounts and interact with the product catalogue, make transactions, manage orders, and receive alerts when products need restocking.",
+      "skills": ["Apache Ant", "Java Swing", "MySQL"],
+      "demo": "../../../public/ProductManagementSystem.mp4",
+      "source": "https://github.com/ChimpanzEatingGrades/ProductManagementSystem"
     }
   ]
   
