--- a/react-portfolio/src/data/projects.json
+++ b/react-portfolio/src/data/projects.json
@@ -2,7 +2,7 @@
     {
       "title": "English Calculator",
       "imageSrc": "projects/SmartCal.gif",
-      "description": "Calculator application utilizing Google's speech recognition library  in Python for hands-free arithmetic.",
+      "description": "Calculator application utilizing Google's speech recognition library in Python for hands-free arithmetic. Does not use an LLM.",
       "skills": ["Python"],
       "demo": "/SmartCal.mp4",
       "source": "https://github.com/ChimpanzEatingGrades/EnglishCalculator"
@@ -18,7 +18,7 @@
     {
       "title": "Product Management System",
       "imageSrc": "projects/productMS.png",
-      "description": "Developed a full-stack product management system with a Java-based GUI (Swing) for the frontend and MySQL for the database backend. The system supports features such as user registration/verification, an automated restock alert system, order and supplier management, CRUD functions, product tracking, and inventory control. The application enables users to create accounts and interact with the product catalogue, make transactions, manage orders, and receive alerts when products need restocking.",
+      "description": "A full-stack product management system with a Java-based GUI (Swing) for the frontend and MySQL for the database backend. The system supports features such as user registration/verification, an automated restock alert system, order and supplier management, CRUD functions, product tracking, and inventory control. The application enables users to create accounts and interact with the product catalogue, make transactions, manage orders, and receive alerts when products need restocking.",
       "skills": ["Apache Ant", "Java Swing", "MySQL"],
       "demo": "/ProductManagementSystem.mp4",
       "source": "https://github.com/ChimpanzEatingGrades/ProductManagementSystem"
